--- a/src/components/game/turn-status/turn-status.module.css
+++ b/src/components/game/turn-status/turn-status.module.css
@@ -3,6 +3,7 @@
   bottom: 0;
   left: 50%;
   transform: translate(-50%, 80%);
+  z-index: 1;
 }
 .turn img {
   max-width: unset;
